# GL2

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: Program.h  Shader.h  WindowContext.h  util.h
src/: main.cpp
src/shaders/: blue.frag  framebuffer.frag  framebuffer.vert  hello.comp  hello.frag  test.frag  test.geom  test.vert
